remove navbar on mobile. fix desktop

--- a/css/custom.css
+++ b/css/custom.css
@@ -7,7 +7,7 @@ html{scroll-behavior:smooth}
 
 .main-names {
     font-family: 'Mansalva', 'serif' !important;
-    font-size: 4em !important;
+    font-size: 3em !important;
 }
 
 .fh5co-heading h2 {
@@ -72,6 +72,8 @@ html{scroll-behavior:smooth}
 
 .church {
     margin-top: 20px;
+    font-size: 1.5em;
+    /* font-weight: bold; */
 }
 
 .main-dates {
@@ -82,72 +84,7 @@ html{scroll-behavior:smooth}
     padding: 15px 0 !important;
 }
 
-@media screen and (max-width: 900px) {
-    .fh5co-nav #fh5co-logo {
-        font-size: 0.5em !important;
-    }
 
-    .main-names {
-        font-family: 'Mansalva', 'serif' !important;
-        font-size: 1.5em !important;
-    }
-
-    .strong-dt {
-        font-size: 1.6em !important;;
-    }
-
-    .light-dt {
-        font-size: 1.3em !important;;
-    }
-
-    .simply-countdown {
-        transform: scale(0.7) !important;
-            margin-bottom: 0em !important;
-    }
-
-    .family-names {
-        margin-top: 0px !important;  
-        margin-bottom: 0px !important;
-        font-size: 0.95em !important;
-    }
-
-    .family-names h2 {
-        font-family: 'miama', 'serif' !important;
-        font-size: 2.7em !important;
-    }
-
-    .church {
-        margin-top: 10px;
-        font-size: 1em !important;
-        font-weight: bold;
-    }
-
-    hr {
-        margin-top: 15px !important;
-        margin-bottom: 5px !important;
-    }
-
-    .main-dates {
-        margin-top: 10px !important;
-    }
-
-    .center-items {
-        align-items: center !important;
-    }
-
-    .fh5co-nav {
-        display: 'none';
-    }
-
-    .child-names {
-        font-size: 4em !important;
-        line-height: 1em !important;
-    }
-
-    .date-col {
-        line-height: 1.7em !important;
-    }
-}
 
 
 /* #monogram {
@@ -174,14 +111,14 @@ h2 {
 }
 
 .strong-dt {
-    font-size: 1.5em;
+    font-size: 2.5em;
     font-weight:bolder;
     color: #1d425d;
     font-family: 'Mansalva';
 }
 
 .light-dt {
-    font-size: 1.2em;
+    font-size: 2em;
     font-weight: bolder;
     color: #1d425d;
     font-family: 'Mynerve';
@@ -196,4 +133,8 @@ h2 {
 .vertical-center {
     display: flex;
     align-items: center;
+}
+
+.date-col {
+    line-height: 3em;
 }
